--- a/components/ToggleSwitch/toggle-switch.module.scss
+++ b/components/ToggleSwitch/toggle-switch.module.scss
@@ -1,5 +1,5 @@
 .toggle-switch-container {
-  .toggle-switch {
+  .toggleSwitch {
     position: relative;
     display: inline-block;
     width: 4rem;
@@ -7,12 +7,13 @@
   }
 
   // Hide default HTML checkbox
-  .toggle-switch input {
+  .toggleSwitch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
 
+  // The visible slider container
   .slider {
     position: absolute;
     cursor: pointer;
@@ -20,30 +21,30 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #ccc; // TODO: Slider Background Color
     transition: 0.4s;
   }
 
+  // The rounded toggle button in the container
   .slider:before {
     position: absolute;
     content: "";
-    height: 1.5rem;
-    width: 1.5rem;
-    left: 0.25rem;
-    bottom: 0.25rem;
+    height: 24px;
+    width: 24px;
     background-color: white;
+    transform: translate(15%, -50%);
+    top: 50%;
     transition: 0.4s;
+    border-radius: 50%;
   }
 
-  .input:checked + .slider {
-    background-color: #2196f3;
+  .slider.round {
+    border-radius: 32px;
   }
 
-  .input:focus + .slider {
-    box-shadow: 0 0 1px #2196f3;
-  }
-
-  .input:checked + .slider:before {
-    transform: translateX(1.5rem);
+  // Move Toggle
+  .checked:before {
+    transform: translate(calc(100% + 12px), -50%);
+    background-color: #2196f3; //TODO: Color when switch is checked
   }
 }
