--- a/components/PlaygroundPreviewCard/playground-preview-card.module.scss
+++ b/components/PlaygroundPreviewCard/playground-preview-card.module.scss
@@ -1,3 +1,14 @@
 .playground-preview-card {
-  border: 2px solid var(--card-background);
+  /* border: 2px solid var(--card-background); */
+  cursor: pointer;
+  display: inline-flex;
+  flex-direction: column;
+  padding: 1rem;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border: 1px solid transparent;
+  transition: 0.2s;
+}
+
+.playground-preview-card:hover {
+  border: 1px solid blue;
 }
