--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,12 @@
   --card-background: red;
 }
 
+// Color defintions
+:root {
+  --left-spotlight-color: rgba(255, 165, 0, 0.5);
+  --right-spotlight-color: rgba(106, 90, 205, 0.5);
+}
+
 html,
 body {
   padding: 0;
